{
  "version": 4,
  "terraform_version": "1.8.4",
  "serial": 163,
  "lineage": "f9fc8d79-7927-ac1d-fc60-3c9e6f013e07",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-030500d767fc27b03",
            "arn": "arn:aws:ec2:eu-central-1:149536481199:elastic-ip/eipalloc-030500d767fc27b03",
            "association_id": "eipassoc-06923ff890076dab8",
            "domain": "vpc",
            "id": "eipalloc-030500d767fc27b03",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-07d985e48b77e6d3f",
            "private_dns": "ip-10-0-101-190.eu-central-1.compute.internal",
            "private_ip": "10.0.101.190",
            "public_dns": "ec2-18-158-1-243.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.158.1.243",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "devops",
              "Name": "NAT Gateway EIP 1"
            },
            "tags_all": {
              "Environment": "devops",
              "Name": "NAT Gateway EIP 1"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0974b56720df62e47",
            "arn": "arn:aws:ec2:eu-central-1:149536481199:elastic-ip/eipalloc-0974b56720df62e47",
            "association_id": "eipassoc-0a491830d526f6b75",
            "domain": "vpc",
            "id": "eipalloc-0974b56720df62e47",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-0ba1c03ef5059bc8a",
            "private_dns": "ip-10-0-102-226.eu-central-1.compute.internal",
            "private_ip": "10.0.102.226",
            "public_dns": "ec2-3-75-59-161.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.75.59.161",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "devops",
              "Name": "NAT Gateway EIP 2"
            },
            "tags_all": {
              "Environment": "devops",
              "Name": "NAT Gateway EIP 2"
            },
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-015a62ac4f5504de0",
            "arn": "arn:aws:ec2:eu-central-1:149536481199:elastic-ip/eipalloc-015a62ac4f5504de0",
            "association_id": "eipassoc-02c82f6a2c1f1408e",
            "domain": "vpc",
            "id": "eipalloc-015a62ac4f5504de0",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-0584329c1e33db997",
            "private_dns": "ip-10-0-103-40.eu-central-1.compute.internal",
            "private_ip": "10.0.103.40",
            "public_dns": "ec2-18-153-236-191.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.153.236.191",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "devops",
              "Name": "NAT Gateway EIP 3"
            },
            "tags_all": {
              "Environment": "devops",
              "Name": "NAT Gateway EIP 3"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:149536481199:internet-gateway/igw-043c1e303d4d711f9",
            "id": "igw-043c1e303d4d711f9",
            "owner_id": "149536481199",
            "tags": {
              "Environment": "devops",
              "Name": "devops-assetreality-vpc-igw"
            },
            "tags_all": {
              "Environment": "devops",
              "Name": "devops-assetreality-vpc-igw"
            },
            "vpc_id": "vpc-009c769ae19f0253e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-030500d767fc27b03",
            "association_id": "eipassoc-06923ff890076dab8",
            "connectivity_type": "public",
            "id": "nat-061a2edd834eef813",
            "network_interface_id": "eni-07d985e48b77e6d3f",
            "private_ip": "10.0.101.190",
            "public_ip": "18.158.1.243",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-049c9382df9c68dad",
            "tags": {
              "Environment": "devops",
              "Name": "NAT Gateway 1"
            },
            "tags_all": {
              "Environment": "devops",
              "Name": "NAT Gateway 1"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0974b56720df62e47",
            "association_id": "eipassoc-0a491830d526f6b75",
            "connectivity_type": "public",
            "id": "nat-0f2181bf8884a933f",
            "network_interface_id": "eni-0ba1c03ef5059bc8a",
            "private_ip": "10.0.102.226",
            "public_ip": "3.75.59.161",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0177c5c0965d98146",
            "tags": {
              "Environment": "devops",
              "Name": "NAT Gateway 2"
            },
            "tags_all": {
              "Environment": "devops",
              "Name": "NAT Gateway 2"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-015a62ac4f5504de0",
            "association_id": "eipassoc-02c82f6a2c1f1408e",
            "connectivity_type": "public",
            "id": "nat-06d2e242d83d2c5b2",
            "network_interface_id": "eni-0584329c1e33db997",
            "private_ip": "10.0.103.40",
            "public_ip": "18.153.236.191",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-087974db250bd5660",
            "tags": {
              "Environment": "devops",
              "Name": "NAT Gateway 3"
            },
            "tags_all": {
              "Environment": "devops",
              "Name": "NAT Gateway 3"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:149536481199:route-table/rtb-00c2d70cd526d8b54",
            "id": "rtb-00c2d70cd526d8b54",
            "owner_id": "149536481199",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-061a2edd834eef813",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "devops",
              "Name": "Private Route Table 1"
            },
            "tags_all": {
              "Environment": "devops",
              "Name": "Private Route Table 1"
            },
            "timeouts": null,
            "vpc_id": "vpc-009c769ae19f0253e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:149536481199:route-table/rtb-002423148739f3ad8",
            "id": "rtb-002423148739f3ad8",
            "owner_id": "149536481199",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f2181bf8884a933f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "devops",
              "Name": "Private Route Table 2"
            },
            "tags_all": {
              "Environment": "devops",
              "Name": "Private Route Table 2"
            },
            "timeouts": null,
            "vpc_id": "vpc-009c769ae19f0253e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:149536481199:route-table/rtb-0f2cf88842dd74716",
            "id": "rtb-0f2cf88842dd74716",
            "owner_id": "149536481199",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06d2e242d83d2c5b2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "devops",
              "Name": "Private Route Table 3"
            },
            "tags_all": {
              "Environment": "devops",
              "Name": "Private Route Table 3"
            },
            "timeouts": null,
            "vpc_id": "vpc-009c769ae19f0253e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:149536481199:route-table/rtb-0821269725b197a3f",
            "id": "rtb-0821269725b197a3f",
            "owner_id": "149536481199",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-043c1e303d4d711f9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "devops",
              "Name": "Public Route Table"
            },
            "tags_all": {
              "Environment": "devops",
              "Name": "Public Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-009c769ae19f0253e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b3f6cca132f61fe1",
            "route_table_id": "rtb-00c2d70cd526d8b54",
            "subnet_id": "subnet-06bb12be7da770f15"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c379eb7add12c4e0",
            "route_table_id": "rtb-002423148739f3ad8",
            "subnet_id": "subnet-096b7b5f83db9102d"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07b00dbe23136c4fb",
            "route_table_id": "rtb-0f2cf88842dd74716",
            "subnet_id": "subnet-0a8b9d37e0da5186b"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0317a4e430473a5f5",
            "route_table_id": "rtb-0821269725b197a3f",
            "subnet_id": "subnet-049c9382df9c68dad"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ccfa8f3a80e5d2fc",
            "route_table_id": "rtb-0821269725b197a3f",
            "subnet_id": "subnet-0177c5c0965d98146"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-021dec90511cdb266",
            "route_table_id": "rtb-0821269725b197a3f",
            "subnet_id": "subnet-087974db250bd5660"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:149536481199:subnet/subnet-06bb12be7da770f15",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06bb12be7da770f15",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "149536481199",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "devops",
              "Name": "Private Subnet 1"
            },
            "tags_all": {
              "Environment": "devops",
              "Name": "Private Subnet 1"
            },
            "vpc_id": "vpc-009c769ae19f0253e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:149536481199:subnet/subnet-096b7b5f83db9102d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-096b7b5f83db9102d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "149536481199",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "devops",
              "Name": "Private Subnet 2"
            },
            "tags_all": {
              "Environment": "devops",
              "Name": "Private Subnet 2"
            },
            "vpc_id": "vpc-009c769ae19f0253e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:149536481199:subnet/subnet-0a8b9d37e0da5186b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a8b9d37e0da5186b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "149536481199",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "devops",
              "Name": "Private Subnet 3"
            },
            "tags_all": {
              "Environment": "devops",
              "Name": "Private Subnet 3"
            },
            "vpc_id": "vpc-009c769ae19f0253e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:149536481199:subnet/subnet-049c9382df9c68dad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-049c9382df9c68dad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "149536481199",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "devops",
              "Name": "Public Subnet 1"
            },
            "tags_all": {
              "Environment": "devops",
              "Name": "Public Subnet 1"
            },
            "vpc_id": "vpc-009c769ae19f0253e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:149536481199:subnet/subnet-0177c5c0965d98146",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0177c5c0965d98146",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "149536481199",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "devops",
              "Name": "Public Subnet 2"
            },
            "tags_all": {
              "Environment": "devops",
              "Name": "Public Subnet 2"
            },
            "vpc_id": "vpc-009c769ae19f0253e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:149536481199:subnet/subnet-087974db250bd5660",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-087974db250bd5660",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "149536481199",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "devops",
              "Name": "Public Subnet 3"
            },
            "tags_all": {
              "Environment": "devops",
              "Name": "Public Subnet 3"
            },
            "vpc_id": "vpc-009c769ae19f0253e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:149536481199:vpc/vpc-009c769ae19f0253e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02b0ef29bca6d47a7",
            "default_route_table_id": "rtb-014f5a96c8bd46145",
            "default_security_group_id": "sg-0747e3f35f50342b2",
            "dhcp_options_id": "dopt-00c1dc2aa1dc8dd82",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-009c769ae19f0253e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-014f5a96c8bd46145",
            "owner_id": "149536481199",
            "tags": {
              "Environment": "devops",
              "Name": "devops-assetreality-vpc"
            },
            "tags_all": {
              "Environment": "devops",
              "Name": "devops-assetreality-vpc"
            }
          }
        }
      ]
    }
  ]
}